--- a/style.css
+++ b/style.css
@@ -146,14 +146,33 @@ h1 {
     padding: 1rem;
     position: relative;
     background: var(--secondary-color);
+    visibility: hidden;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
 }
 
 #timeline ul li:nth-child(odd) div {
     left: 40px;
+    -webkit-transform: translate(200px,0);
+    -moz-transform: translate(200px,0);
+    -ms-transform: translate(200px,0);
+    -o-transform: translate(200px,0);
+    transform: translate(200px,0);
 }
 
 #timeline ul li:nth-child(even) div {
     left: -434px;
+    transform: translate(-200px,0);
+}
+
+#timeline ul li.show div {
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    transform: none;
+    visibility: visible;
+    opacity:1;
 }
 
 #timeline ul li:after {
